--- a/index.html
+++ b/index.html
@@ -2,44 +2,50 @@
     <head>
         <html lang="es"></html>
         <title>
-            pagina en html 
+            Página en HTML
         </title>
     </head>
     <!--esto es un comentario -->
     <body>
-        <!-- titulos desde h1 a h6 -->
+        <!-- títulos desde h1 a h6 -->
         <h1>
-            titulo en grande 
+            título en grande 
         </h1>
         <h2>
-            titulo no tan grande 
+            título no tan grande 
         </h2>
-        <h3> titulo pequeño </h3>
+        <h3> título pequeño </h3>
         <p>
-            esto es un parrafo
+            esto es un párrafo
         </p>
-        <!--esto son parrafos sencillos -->
+        <!--esto son párrafos sencillos -->
         <p>
             hola mundo 
         </p>
         <meta charset="utf-8">
         <!--lista hacer listas desordenadas -->
         <ul>
-            <li>teclado </li>
-            <li> mouse </li>
-            <li>cpu</li>
-            <li>monitor </li>
+            <li>Teclado </li>
+            <li>Mouse </li>
+            <li>CPU </li>
+            <li>Monitor </li>
         </ul>
     <!--lista hacer listas ordenada -->
         <ol>
-            <li>raquel  </li>
-            <li> raul </li>
-            <li>zurita</li>
-            <li>francisco </li>
+            <li>Jose Juan  </li>
+            <li>Luis Alfonso </li>
+            <li>Airam Anette</li>
+            <li>Irma Patricia </li>
         </ol>
-        <a href="https://www.google.com/?hl=es_419" target="_blank">enlace a google</a>
-        
 
+
+    <h1>
+        <a href="https://www.google.com/?hl=es_419" target="_blank"> Enlace a google</a>
+   </h1>
+
+
+        
     </body>
 
 </html> 
+
